# AI-Research-Navigator

./: .coverage  README.md  architecture.md  complete_corpus.py  docker-compose.yml  evaluation_report.json  evaluation_report.md  main.py  manifest.json  pyproject.toml
docs/adr/: 001-chunking.md  002-embedding-model.md  003-hybrid-fusion.md  004-refusal-threshold.md
documents/hf-learn/: hf-agents-u01.md  hf-agents-u02.md  hf-agents-u03.md  hf-drl-u01.md  hf-drl-u04.md  hf-drl-u08.md  hf-nlp-ch01.md  hf-nlp-ch02.md  hf-nlp-ch03.md  hf-nlp-ch05.md  hf-nlp-ch06.md  hf-nlp-ch07.md
documents/lab-blogs/: anthropic-mapping-mind-2024-05.md  deepmind-alphaproof-2024-07.md  openai-weak-to-strong-2023-12.md
documents/lillog/: lillog-adversarial-2023-10.md  lillog-extrinsic-hallucinations-2024-07.md  lillog-llm-agents-2023-06.md  lillog-prompt-eng-2023-03.md  lillog-reward-hacking-2024-11.md
src/: config.py
src/agent/: graph.py  router.py  state.py  tools.py
src/eval/: citation_faithfulness.py  citation_judge.py  citation_rubric.py  config_comparison.py  evaluation_report.py  golden_questions.py  latency_metrics.py  refusal_metrics.py  report_markdown.py  retrieval_metrics.py  test_acceptance.py  test_questions.py  token_cost.py
src/generate/: answer_generator.py
src/ingest/: check_qudrant.py  chunker.py  create_indexes.py  id_generator.py  md_parser.py  metadata_builder.py  pdf_parser.py  qdrant_store.py  qdrant_upsert.py  scratch_chunk.py
src/research_navigator/: ingest.py
src/retrivel/: bm25_retriever.py  citation_builder.py  hybrid_retriever.py  retriever.py  (+5 more)
(+19 files in other folders)
